Fix settings plist

--- a/eu.rensbr.FontReplace.settings.plist
+++ b/eu.rensbr.FontReplace.settings.plist
@@ -1,16 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist SYSTEM "file://localhost/System/Library/DTDs/PropertyList.dtd">
 <plist version="1.0">
     <dict>
-        <key>Label</key>
-        <string>eu.rensbr.FontReplace</string>
-        <key>ProgramArguments</key>
-        <array>
-            <string>sh</string>
-            <string>-c</string>
-            <string>launchctl setenv DYLD_INSERT_LIBRARIES /Library/libFontReplace.dylib</string>
-        </array>
-        <key>RunAtLoad</key>
-        <true/>
+        <key>.AppleSystemUIFont</key>
+        <string>Avenir-Book</string>
+        <key>.AppleSystemUIFontBold</key>
+        <string>Avenir-Heavy</string>
     </dict>
 </plist>
